--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@material-ui/core": "^3.9.3",
     "@material-ui/icons": "^3.0.2",
     "formik": "^1.5.2",
+    "formik-material-ui": "0.0.16",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "typeface-roboto": "0.0.54",
