--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@material-ui/icons": "^3.0.2",
     "formik": "^1.5.2",
     "formik-material-ui": "0.0.16",
+    "ramda": "^0.26.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "typeface-roboto": "0.0.54",
