--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@material-ui/core": "^3.9.3",
     "@material-ui/icons": "^3.0.2",
+    "classnames": "^2.2.6",
     "formik": "^1.5.2",
     "formik-material-ui": "0.0.16",
     "ramda": "^0.26.1",
@@ -29,7 +30,7 @@
     "@types/react": "^16.8.10",
     "@types/react-dom": "^16.8.3",
     "autoprefixer": "^9.5.1",
-    "typescript": "^3.4.1"
+    "typescript": "^3.3.3333"
   },
   "babel": {
     "presets": [
