--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "ramda": "^0.26.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-router-dom": "^5.0.1",
     "typeface-roboto": "0.0.54",
     "yup": "^0.27.0"
   },
